discussion/kv_engine/122153/122153_rev20_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38095: Refactor wrapper code to use WriteDocs API

WriteDocs changes how local documents need to be handled. Instead of
being able to write directly into magma's write cache, we have to use
something similar to pendingReqs where we create a vector of local
document requests to be inserted.

Change-Id: I364ec8edbf2a8dbd3c2f44a0f31bb4d6a421f985

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-03-25 21:54:52.000000000
Message: 
Uploaded patch set 20.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-03-25 22:30:55.000000000
Message: 
Patch Set 20: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27096/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2079): error C2664: "void magma::Slice::FromString(std::string &)": cannot convert argument 1 from "const std::string" to "std::string &" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27096/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23168/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2079:25:
error: binding reference of type "basic_string<...>" to value of type "const basic_string<...>" drops "const" qualifier
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23168/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1345/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2079:25: error: binding reference of type "basic_string<...>" to value of type "const basic_string<...>" drops "const" qualifier [clang-diagnostic-error]
    keySlice.FromString(openCollectionsKey);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/slice.h:47:34: note: passing argument to parameter "s" here
    void FromString(std::string& s) {
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2083:25: error: binding reference of type "basic_string<...>" to value of type "const basic_string<...>" drops "const" qualifier [clang-diagnostic-error]
    keySlice.FromString(openScopesKey);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/slice.h:47:34: note: passing argument to parameter "s" here
    void FromString(std::string& s) {
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2087:25: error: binding reference of type "basic_string<...>" to value of type "const basic_string<...>" drops "const" qualifier [clang-diagnostic-error]
    keySlice.FromString(droppedCollectionsKey);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/slice.h:47:34: note: passing argument to parameter "s" here
    void FromString(std::string& s) {
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1345/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2079:25:
error: binding reference of type "basic_string<...>" to value of type "const basic_string<...>" drops "const" qualifier [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1345/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2793/ : FAILURE

Compile error at [2020-03-25T22:11:13.517Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2079:43:
error: binding reference of type ?std::__cxx11::string& {aka std::__cxx11::basic_string<char>&}? to ?const string {aka const std::__cxx11::basic_string<char>}? discards qualifiers
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10599/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2745/ : FAILURE

Compile error at [2020-03-25T22:14:53.446Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2079:43:
error: binding reference of type ?std::__cxx11::string& {aka std::__cxx11::basic_string<char>&}? to ?const string {aka const std::__cxx11::basic_string<char>}? discards qualifiers
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2745/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1792/ : FAILURE

Compile error at [2020-03-25T22:19:01.978Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2079:25:
error: binding value of type "const basic_string<...>" to reference to type "basic_string<...>" drops "const" qualifier
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1792/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25466/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2742/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
